# giggenius

crewai-service/: Dockerfile  api_server.py  config.py  main.py  pyproject.toml
crewai-service/analyze_jobs_matches/: api_client.py  job_processor.py  main.py  models.py
crewai-service/crewai_service/: api_client.py  config.py  crew.py  job_processor.py  main.py  models.py  task_processor.py
crewai-service/crewai_service/config/: tasks.yaml
crewai-service/crewai_service/data/: cv.md
crewai-service/db/: chroma.sqlite3
crewai-service/match_analysis_flow/: pyproject.toml
crewai-service/match_analysis_flow/src/match_analysis_flow/: main.py
crewai-service/match_analysis_flow/src/match_analysis_flow/crews/match_analysis_crew/: match_analysis_crew.py
crewai-service/match_analysis_flow/src/match_analysis_flow/crews/match_analysis_crew/config/: agents.yaml  tasks.yaml
crewai-service/match_analysis_flow/src/match_analysis_flow/crews/prescreen_crew/: prescreen_crew.py
crewai-service/match_analysis_flow/src/match_analysis_flow/crews/prescreen_crew/config/: agents.yaml  tasks.yaml
crewai-service/match_analysis_flow/src/match_analysis_flow/crews/proposal_crew/config/: agents.yaml
crewai-service/server/: routes.py  server.py
crewai-service/src/match_to_proposal/: crew.py  main.py
crewai-service/src/match_to_proposal/config/: agents.yaml  tasks.yaml
crewai-service/tasks/: api_client.py  fetcher.py  manager.py  models.py  task_processor.py  worker.py
crewai_service/: config.py  main.py  pyproject.toml
crewai_service/OLD_crewai_service/: crew.py  main.py
crewai_service/lead_score_flow/: README.md  flow.py
crewai_service/lead_score_flow/crews/intake_crew/: intake_analysis_crew.py
crewai_service/lead_score_flow/crews/intake_crew/config/: agents.yaml  tasks.yaml
crewai_service/lead_score_flow/crews/match_analysis_crew/: match_analysis_crew.py
crewai_service/lead_score_flow/crews/prescreen_crew/: main.py  prescreen_crew.py
crewai_service/lead_score_flow/crews/prescreen_crew/config/: agents.yaml  tasks.yaml
crewai_service/lead_score_flow/crews/proposal_crew/: proposal_crew.py
crewai_service/match_analysis_flow/src/match_analysis_flow/: main.py
crewai_service/match_analysis_flow/src/match_analysis_flow/crews/match_analysis_crew/config/: agents.yaml
crewai_service/match_analysis_flow/src/match_analysis_flow/crews/prescreen_crew/: pyproject.toml
crewai_service/match_analysis_flow/src/match_analysis_flow/crews/proposal_crew/config/: tasks.yaml
crewai_service/tasks/: api_client.py  models.py  task_processor.py  worker.py
frontend/: .env  .env.example  drizzle.config.ts  middleware.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/finetune/: loading.tsx  page.tsx
frontend/app/(dashboard)/jobfeed/: loading.tsx  page.tsx
frontend/app/(dashboard)/profile/: page.tsx
frontend/app/(dashboard)/proposals/: loading.tsx  page.tsx
frontend/components/: JobDetail.tsx  JobFeed.tsx  JobFeedContainer.tsx  JobFilterToggle.tsx  JobImportSection.tsx  Logo.tsx  MatchScore.tsx  PageHeader.tsx  Sidebar.tsx  SidebarNav.tsx  SidebarToggle.tsx  UserProfileForm.tsx  UserProfileSection.tsx
frontend/config/: navigation.ts
frontend/constants/: layout.ts
frontend/hooks/: useClickOutside.ts  useSidebar.ts
frontend/lib/: theme.ts  utils.server.ts  utils.ts
frontend/server/: queries.ts
frontend/server/db/: schema.ts
scraper-service/: upwork-2024-11-22.json
(+10 files in other folders)
