[tool.poetry]
name = "analyze_jobs_matches"
version = "0.1.0"
description = "analyze_jobs_matches using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.35.8" }
crewai-tools = "^0.4.6"

[tool.poetry.scripts]
analyze_jobs_matches = "analyze_jobs_matches.main:run"
train = "analyze_jobs_matches.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
