[tool.poetry]
name = "crewai_service"
version = "0.1.0"
description = "crewai_service using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiohttp = "^3.8.1"
aiohttp-cors = "^0.7.0"
crewai = {extras = ["tools"], version = "^0.95.0"}

[tool.poetry.scripts]
crewai_service = "main:main"
train = "crewai_service.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
