[project]
name = "match_analysis_flow"
version = "0.1.0"
description = "match_analysis_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2,<1.0.0",
]

[project.scripts]
kickoff = "match_analysis_flow.main:kickoff"
plot = "match_analysis_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
