[project]
name = "prescreen_crew"
version = "0.1.0"
description = "prescreen_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
prescreen_crew = "prescreen_crew.main:run"
run_crew = "prescreen_crew.main:run"
train = "prescreen_crew.main:train"
replay = "prescreen_crew.main:replay"
test = "prescreen_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
